# fastembed-native

./: .actrc  .dockerignore  .gitignore  .gitmodules  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.linux  Dockerfile.python  LICENSE  LICENSE-COMMERCIAL.md  LICENSING.md  Makefile  ONNX_BENCHMARK_REPORT.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  license_request.md
.github/workflows/: benchmarks.yml  build-artifacts.yml  ci.yml  release.yml
bindings/csharp/: README.md  benchmark.cs  benchmark.csproj  benchmark_onnx.cs  run_benchmark.sh  test_csharp_native.cs  test_csharp_native.csproj
bindings/csharp/src/: FastEmbed.cs  FastEmbed.csproj  FastEmbedNative.cs
bindings/csharp/tests/: FastEmbed.Tests.csproj  FastEmbedClientTests.cs  FastEmbedIntegrationTests.cs  FastEmbedOnnxTests.cs  FastEmbedPerformanceTests.cs  README.md
bindings/java/: README.md  TestFastEmbedJava.java  TestOnnx.java  build_benchmark.sh  run_benchmark.sh  test_java_native.java
bindings/java/com/fastembed/test/: TestFastEmbedJava.java
bindings/java/java/: benchmark_onnx.java  build_jni.bat  build_jni_linux.sh  build_jni_macos.sh  pom.xml
bindings/java/java/native/: fastembed_jni.c
bindings/java/java/src/main/java/com/fastembed/: FastEmbed.java
bindings/java/native/: fastembed_jni.c
bindings/java/src/main/java/com/fastembed/: FastEmbed.java
bindings/java/src/test/java/: FastEmbedBenchmark.java
bindings/nodejs/: README.md  benchmark.js  benchmark_onnx.js  binding.gyp  find_nasm.py  nasm_wrapper.bat  package-lock.json  package.json  test-embedding-patterns.js  test-native.js  test-onnx.js
bindings/nodejs/addon/: fastembed_napi.cc
bindings/nodejs/lib/: fastembed-native.ts
bindings/nodejs/scripts/: post-build.cjs  post-build.js
bindings/python/: README.md  benchmark.py  benchmark_onnx.py  pyproject.toml  setup.py  setup_simple.py  test_onnx.py  test_python_native.py
bindings/python/src/: __init__.py  fastembed_native.cpp
bindings/python/src/fastembed_native.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/shared/: CMakeLists.txt  Makefile  README.md
bindings/shared/include/: embedding_lib_c.h  fastembed.h  fastembed_config.h  fastembed_internal.h
bindings/shared/src/: embedding_gen_cli.c  embedding_generator.asm  embedding_generator_arm64.s  embedding_lib.asm  embedding_lib_arm64.s  embedding_lib_c.c  fastembed.def  onnx_embedding_cli.c  onnx_embedding_loader.c  vector_ops_cli.c
docs/: ALGORITHM_MATH.md  ALGORITHM_SPECIFICATION.md  API.md  ARCHITECTURE.md  ASSEMBLY_DESIGN.md  BENCHMARKS.md  BUILD_CMAKE.md  BUILD_CSHARP.md  BUILD_JAVA.md  BUILD_NATIVE.md  BUILD_PYTHON.md  BUILD_WINDOWS.md  CI_ARCHITECTURE.md  DOCKER_TESTING.md  DOCUMENTATION_STRUCTURE.md  README.md  RELEASING.md  TESTING_WORKFLOWS.md  USE_CASES.md
docs/algorithms/: ALGORITHM_MATH.md  ALGORITHM_SPECIFICATION.md
docs/api-reference/: API.md
docs/building/: BUILD_CMAKE.md  BUILD_CSHARP.md  BUILD_NATIVE.md
docs/deployment/: BRANCHING_STRATEGY.md  RELEASING.md
docs/getting-started/: QUICK_START.md  USE_CASES.md
docs/testing/: BENCHMARKS.md
examples/: README.md
examples/c/: basic.c
examples/cpp/: basic.cpp
examples/nodejs/: basic.js
examples/python/: basic.py
plans/FastEmbed/: 2025-01-14_documentation-restructure-and-enhancement.md
reports/FastEmbed/: 2025-01-14_phase-1-architecture-enhancement-complete.md  2025-01-15_macos-fixes-final-report.md
scripts/: README.md  aggregate_benchmarks.py  build.py  build_all_windows.bat  build_cmake_linux.sh  build_cmake_windows.bat  build_linux.sh  build_macos.sh  build_native.py  build_windows.bat  build_windows.ps1  clean_windows.bat  docker-test.ps1  docker-test.sh  download_model.py  run_benchmarks.sh  run_onnx_benchmarks.bat  run_onnx_benchmarks.sh  setup_onnx.py  test_shared_windows.bat
tests/: BENCHMARK.md  CMAKE_BUILD_TEST_REPORT.md  README.md  README_TESTING.md  benchmark.c  benchmark_improved.c  poc_algorithm_test.py  poc_alternative_functions.py  poc_sincos_algorithm.py  test_basic.c  test_embedding_generation.c  test_hash_functions.c  test_onnx_dimension.c  test_quality_improvement.c  test_sqrt_quality.c  test_vectors.c
